syntax = "proto3";

package coteacher.v1;

import "coteacher/v1/resources.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc CheckUserExistsByEmail(CheckUserExistsByEmailRequest) returns (CheckUserExistsByEmailResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  UserType user_type = 3;
}

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_STUDENT = 1;
  USER_TYPE_TEACHER = 2;
}


message CreateUserResponse {
  User user = 1;
  UserType user_type = 2;
}

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  User user = 1;
  UserType user_type = 2;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
  UserType user_type = 2;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  UserType user_type = 4;
}

message UpdateUserResponse {
  User user = 1;
  UserType user_type = 2;

}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  User user = 1;
  UserType user_type = 2;
}

message CheckUserExistsByEmailRequest {
  string email = 1;
}

message CheckUserExistsByEmailResponse {
  bool exists = 1;
}